@@ -3,7 +3,7 @@ AUX strigi-0.6.5-gcc4.4-missing-headers.patch 1020 RMD160 91e447323303315a1f8fe2
 AUX strigi-disable_java.patch 784 RMD160 870decf02f7bda63bae9a6f7df0b26caed753fdc SHA1 09dc828ecef7287e7286277713d07f84d6ff72bf SHA256 f267a0a804d96e9ef4cac1138f98572bec17906021282b4db905b804c33b956d
 DIST strigi-0.6.5.tar.bz2 905721 RMD160 d10a3f9fa491f6aef6eba5066969cdcd48b9e09a SHA1 a7594eabd192c75506e8929aafa66195791019a0 SHA256 da9c746c342d645161b906716d82c0b81da069d5e1d40b5a347d91abeef716e9
 DIST strigi-0.7.0.tar.bz2 937446 RMD160 f96faa83c0955e3a665a38b1d84dff1b3ace9405 SHA1 c8f299ae3b5778c6891b58a1966b7342fb5e9e32 SHA256 2b31d24e1de57b82c391af8a6eefb87d40fff06a5c1b43c14aa91f75eaba7efa
-EBUILD strigi-0.6.5.ebuild 2677 RMD160 ea3a84852a15bd3f8db2689e16b79f0e00fcb4ff SHA1 401e86fa38a8a7f3fd351ea1d18c9b07fb0b072f SHA256 c0761259d23dec9da0bfd50d80013e9799dcf3e2a88143d847a491621e1f9fc7
-EBUILD strigi-0.7.0.ebuild 2687 RMD160 50f313059fe8ad595445af00cd47c55cc038bc0c SHA1 95ce442b24be16a18c71808615b076e9607f2fe5 SHA256 5eb18e0d4d922860b4b7f5eb0492270f237f707ae6d2288a9f57b1b730a03c22
-MISC ChangeLog 11352 RMD160 a63960acf27ce5e9305acd09a591757a3b13e8a4 SHA1 61f58fb4ae6a774c361a5c03d3baba14fa349afc SHA256 e07eafd178c2c468576539de077a55f4b8dd54a0dde5b04191c8d2409cfb060a
+EBUILD strigi-0.6.5.ebuild 2685 RMD160 73d89ebb60b8aec6737d5d327f64cae6377aaf7b SHA1 c67ee8866820f1a57fa5a6753174b4cdf321972e SHA256 cf8456017c9f3877b20fa321ad947af63e4d17462293a4949bcc7d91ea3f05e9
+EBUILD strigi-0.7.0.ebuild 2692 RMD160 dd95a133c2354ba648264268e3aed7cb1226b725 SHA1 18176c958a6ef1e33ccba6a9806b9ef6a9c0518d SHA256 192350133a0518295fb5cc6d01295f93be64a5702e2e801385d4d95756a97bff
+MISC ChangeLog 11457 RMD160 6f7c3cc59bbd4e6329ce5e11fb9f6839f2fb6998 SHA1 4bcdbacd8da415522b0183ca4f41d034f0c6b7e9 SHA256 57e6258bce37969856b7d863b76a05058b187bfe988c005c83e9a15f741f51e0
 MISC metadata.xml 486 RMD160 6eb5e37e0646dc21260e2938d9aa6286489e10cd SHA1 d600420837886e1d487266009b803ca76643c571 SHA256 2a4f8b7f0572075a608b0a3fb2e62321b4dbdd61b231cf72218246f0351cda12
