@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/strigi
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/strigi/ChangeLog,v 1.45 2009/12/27 12:41:56 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/strigi/ChangeLog,v 1.46 2009/12/27 17:20:31 armin76 Exp $
+
+  27 Dec 2009; Raúl Porcel <armin76@gentoo.org> strigi-0.6.5.ebuild,
+  strigi-0.7.0.ebuild:
+  Add ~arm
 
   27 Dec 2009; Raúl Porcel <armin76@gentoo.org> strigi-0.7.0.ebuild:
   alpha/ia64/sparc stable
